# CTkFontAwesome

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml
ctkfontawesome/: __init__.py  browser.py  svgs.py
ctkfontawesome/svgs/: consolidate.py
development/: __init__.py  fontawesome_generator.py  smoke_test_fontawesome_update.py  test.py  update_fontawesome.py
tests/: test_api.py  test_generator.py  test_smoke_update.py
utils/: bump_major.sh  bump_minor.sh  bump_patch.sh  common.sh  package.sh  test_wheel_install.sh
