[project]
name = "ctkfontawesome"
version = "0.5.0"
authors = [{name = "Clive Bostock", email = "cbostock20@gmail.com"}]
description = "Use any of the 2k+ free FontAwesome icons in your CustomTkinter / Tkinter applications."
keywords = ["fontawesome", "icons", "customtkinter", "tkinter", "svg", "browser"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
images = ["CairoSVG>=2.7.0", "Pillow>=9.0.0", "customtkinter>=5.2.0"]

[project.urls]
Homepage = "https://github.com/avalon60/CTkFontAwesome"
Repository = "https://github.com/avalon60/CTkFontAwesome"
Issues = "https://github.com/avalon60/CTkFontAwesome/issues"

[project.scripts]
ctkfontawesome-browser = "ctkfontawesome.browser:main"

[tool.poetry]
packages = [{ include = "ctkfontawesome" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.group.dev.dependencies]
build = ">=1.2.2"
bump2version = ">=1.0.1"
pytest = ">=8.3.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
